src/Base/main/default/objects/Lot_Exchange__c/fields/Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Date__c</fullName>
    <label>Exchange Date</label>
    <type>Date</type>
</CustomField>