src/Base/main/default/objects/Lot_Exchange__c/fields/Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Type__c</fullName>
    <label>Exchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lot</fullName>
                <default>true</default>
                <label>Lot</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>