src/Base/main/default/objects/Lot_Exchange__c/fields/Lot_From__c.field-meta.xml
<CustomField>
    <fullName>Lot_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot From</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Lots Exchange (From)</relationshipLabel>
    <relationshipName>Lots_Exchange</relationshipName>
    <type>Lookup</type>
</CustomField>