src/Base/main/default/objects/Lot_Exchange__c/fields/Lot_To__c.field-meta.xml
<CustomField>
    <fullName>Lot_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot To</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Lots Exchange (To)</relationshipLabel>
    <relationshipName>Lots_Exchange_To</relationshipName>
    <type>Lookup</type>
</CustomField>