src/Base/main/default/objects/Lot_Exchange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exchange_Date__c</columns>
    <columns>Lot_From__c</columns>
    <columns>Lot_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>